--- a/.github/workflows/hugo.yaml
+++ b/.github/workflows/hugo.yaml
@@ -1,5 +1,5 @@
 # Sample workflow for building and deploying a Hugo site to GitHub Pages
-name: Deploy Hugo site to Pages
+name: Deploy Hugo site to Github Pages
 
 on:
   # Runs on pushes targeting the default branch
@@ -8,7 +8,7 @@ on:
       - main
 
   # Allows you to run this workflow manually from the Actions tab
-  workflow_dispatch:
+  repository_dispatch:
 
 # Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
 permissions:
