--- a/.github/workflows/hugo.yaml
+++ b/.github/workflows/hugo.yaml
@@ -2,12 +2,12 @@
 name: Deploy Hugo site to Github Pages
 
 on:
-  # Runs on pushes targeting the default branch
   push:
     branches:
       - main
-
-  # Allows you to run this workflow manually from the Actions tab
+  pull_request:
+    branches:
+      - main
   workflow_dispatch:
 
 # Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
