--- a/hugo.toml
+++ b/hugo.toml
@@ -6,7 +6,7 @@ title = "Adam O'Reilly"
 mainSections = "work"
 summary = true
 toc = true
-goatCounter = "adamtoreilly"
+goatCounter = "adamoadamo"
 tagline = "Adam O'Reilly is a designer based in Brooklyn, <nobr>New York</nobr>."
 ga = "G-TF8P2JE3M4"
 
