--- a/.github/workflows/alt_text.yaml
+++ b/.github/workflows/alt_text.yaml
@@ -1,1 +1,23 @@
-/test/
+name: Alt Text Generator
+
+on: 
+  workflow_dispatch
+
+env: azure_api: $({ secrets.AZURE_API})
+
+jobs:
+  run-python:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout Code
+        uses: actions/checkout@v3
+
+      - name: Setup Python
+        uses: actions/setup-python@v4
+        with: 
+          python-version: '3.11'
+
+      - name: Run Python Script
+        run: |
+          pip install requests
+          python ./assets/scripts/alt.py
