--- a/.github/workflows/alt.yaml
+++ b/.github/workflows/alt.yaml
@@ -3,17 +3,18 @@ name: Alt Text Generator
 on: 
   workflow_dispatch
 
-env: azure_api: $({ secrets.AZURE_API })
+env:
+  AZURE_API: ${{ secrets.AZURE_API }}
 
 jobs:
   run-python:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout Code
-        uses: actions/checkout@v3
+        uses: actions/checkout@v2
 
       - name: Setup Python
-        uses: actions/setup-python@v4
+        uses: actions/setup-python@v2
         with: 
           python-version: '3.11'
 
