--- a/.github/workflows/alt.yaml
+++ b/.github/workflows/alt.yaml
@@ -11,10 +11,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout Code
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
 
       - name: Setup Python
-        uses: actions/setup-python@v2
+        uses: actions/setup-python@v4
         with: 
           python-version: '3.11'
 
@@ -23,4 +23,4 @@ jobs:
           pip install requests pyyaml
 
       - name: Run Python Script
-        run: python ././assets/scripts/alt.py
+        run: python ./assets/scripts/alt.py
