--- a/.github/workflows/alt.yaml
+++ b/.github/workflows/alt.yaml
@@ -14,13 +14,11 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Setup Python
-        uses: actions/setup-python@v4
+        uses: actions/setup-python@v3
         with: 
           python-version: '3.11'
 
-      - name: Install Dependencies
+      - name: Run Python Script
         run: |
           pip install requests pyyaml
-
-      - name: Run Python Script
-        run: python ./assets/scripts/alt.py
+          python ./assets/scripts/alt.py
