--- a/.github/workflows/alt.yaml
+++ b/.github/workflows/alt.yaml
@@ -20,5 +20,5 @@ jobs:
 
       - name: Run Python Script
         run: |
-          pip install requests pyyaml
+          pip install toml
           python ./assets/scripts/alt.py
