--- a/.github/workflows/alt.yaml
+++ b/.github/workflows/alt.yaml
@@ -12,16 +12,17 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout Code
-        uses: actions/checkout@v3
+        uses: actions/checkout@v2
 
       - name: Setup Python
-        uses: actions/setup-python@v3
+        uses: actions/setup-python@v2
         with: 
           python-version: '3.9'
 
       - name: Install Dependencies
         run: |
-          pip install toml requests azure-ai-vision
+          python -m pip install --upgrade pip
+          pip install toml requests azure-cognitiveservices-vision-computervision
 
       - name: Run Python Script
         run: python ./assets/scripts/alt.py
