--- a/.github/workflows/alt.yaml
+++ b/.github/workflows/alt.yaml
@@ -21,9 +21,8 @@ jobs:
 
       - name: Install Dependencies
         run: |
-          python -m pip install --upgrade pip
-          python -m pip install azure-ai-vision
-          pip install toml requests 
+          pip install toml requests
+          pip install --upgrade azure-cognitiveservices-vision-computervision
 
       - name: Run Python Script
         run: python ./assets/scripts/alt.py
