--- a/.github/workflows/alt.yaml
+++ b/.github/workflows/alt.yaml
@@ -45,4 +45,4 @@ jobs:
 
       # Push the changes back to your repository. Only push if there was a commit in the previous step
       - name: Push changes
-        run: git push origin ${{ github.head_ref }} || echo "No changes to push"
+        run: git push origin HEAD:main || echo "No changes to push"
