--- a/.github/workflows/alt.yaml
+++ b/.github/workflows/alt.yaml
@@ -16,6 +16,7 @@ jobs:
         uses: actions/checkout@v3
         with:
           token: ${{ secrets.GH_PERSONAL_ACCESS_TOKEN }} # Use your personal access token to checkout
+          ref: refs/heads/main
 
       - name: Setup Python
         uses: actions/setup-python@v3
