--- a/hugo.toml
+++ b/hugo.toml
@@ -1,11 +1,11 @@
 baseURL = "http://adamtoreilly.info/"
 languageCode = "en-us"
-title = "Adam O'Reilly"
+title = "Adam Taylor O'Reilly"
 
 [Params]
 mainSections = "work"
 goatCounter = "adamoadamo"
-tagline = "Adam O'Reilly is a designer and developer based in Brooklyn, <nobr>New York</nobr>."
+tagline = "Adam Taylor O'Reilly is a designer and developer based in Brooklyn, <nobr>New York</nobr>."
 ga = "G-TF8P2JE3M4"
 
 disableKinds = ["taxonomy", "term", "RSS"]
