--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -2,6 +2,8 @@ backend:
   name: github
   repo: adamoadamo/adamo-portfolio
   branch: main
+  base_url: https://adamtoreilly.info
+  auth_endpoint: oauth
 
 # Remove local backend since we're going live
 # local_backend: true
