--- a/.github/workflows/hugo.yaml
+++ b/.github/workflows/hugo.yaml
@@ -4,10 +4,10 @@ name: Deploy Hugo site
 on:
   push:
     branches:
-      - main
+      - master
   pull_request:
     branches:
-      - main
+      - master
   workflow_dispatch:
 
 # Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
