--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -1,8 +1,9 @@
 backend:
   name: github
   repo: adamoadamo/adamo-portfolio
-  branch: main
+  branch: master
   base_url: https://api.decapcms.org
+  auth_endpoint: auth
 
 # Remove local backend since we're going live
 # local_backend: true
