Enhance GitHub Actions workflow and update headers for admin directory. Added a step to list contents of the admin directory in the Hugo workflow. Updated CORS and security headers for the /admin path in the headers file.

--- a/.github/workflows/hugo.yaml
+++ b/.github/workflows/hugo.yaml
@@ -59,7 +59,11 @@ jobs:
           hugo \
             --gc \
             --minify \
-            --baseURL "${{ steps.pages.outputs.base_url }}/"          
+            --baseURL "${{ steps.pages.outputs.base_url }}/"
+      - name: List admin directory
+        run: |
+          echo "Checking admin directory contents:"
+          ls -la public/admin/
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v2
         with:
