Add site_id to Decap CMS config

--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -3,6 +3,7 @@ backend:
   repo: adamoadamo/adamo-portfolio
   branch: master
   base_url: https://api.decapcms.org
+  site_id: adamtoreilly.info
 
 site_url: https://adamtoreilly.info
 display_url: https://adamtoreilly.info
