Add auth_endpoint for callback handling

--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -3,6 +3,7 @@ backend:
   repo: adamoadamo/adamo-portfolio
   branch: master
   base_url: https://decap-authentication.netlify.app
+  auth_endpoint: callback
   site_id: adamtoreilly.info
 
 site_url: https://adamtoreilly.info
