--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -2,9 +2,8 @@ backend:
   name: github
   repo: adamoadamo/adamo-portfolio
   branch: master
-  base_url: https://decap-authentication.netlify.app
-  auth_endpoint: callback
-  site_id: adamtoreilly.info
+  base_url: https://auth.decapcms.org
+  auth_endpoint: auth
 
 site_url: https://adamtoreilly.info
 display_url: https://adamtoreilly.info
