--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -3,7 +3,8 @@ backend:
   repo: adamoadamo/adamo-portfolio
   branch: master
   base_url: https://api.netlify.com
-  auth_endpoint: auth
+  auth_endpoint: auth/github
+  site_id: adamtoreilly.info
 
 site_url: https://adamtoreilly.info
 display_url: https://adamtoreilly.info
