--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -2,6 +2,7 @@ backend:
   name: github
   repo: adamoadamo/adamo-portfolio
   branch: master
+  base_url: https://api.decapcms.org
 
 site_url: https://adamtoreilly.info
 display_url: https://adamtoreilly.info
