Update base URL in Decap CMS configuration to use Netlify endpoint

--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -2,7 +2,7 @@ backend:
   name: github
   repo: adamoadamo/adamo-portfolio
   branch: master
-  base_url: https://api.decapcms.org
+  base_url: https://api.netlify.com
 
 site_url: https://adamtoreilly.info
 display_url: https://adamtoreilly.info
