Update Netlify site ID in CMS config

--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -2,7 +2,8 @@ backend:
   name: github
   repo: adamoadamo/adamo-portfolio
   branch: master
-  base_url: https://api.netlify.com
+  auth_endpoint: auth
+  site_id: ddb84c21-87cf-4153-b84f-e5aee4170d98
 
 site_url: https://adamtoreilly.info
 display_url: https://adamtoreilly.info
