--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -2,9 +2,8 @@ backend:
   name: github
   repo: adamoadamo/adamo-portfolio
   branch: master
-  api_root: https://api.netlify.com
-  cms_label_prefix: decap-cms/
-  site_domain: ddb84c21-87cf-4153-b84f-e5aee4170d98.netlify.app
+  base_url: https://api.netlify.com
+  site_id: ddb84c21-87cf-4153-b84f-e5aee4170d98
 
 site_url: https://adamtoreilly.info
 display_url: https://adamtoreilly.info
